# bivariate-interpolation

./: CMakeLists.txt  README.md
boost/math/interpolators/detail/: tri_mesh.hpp  triangulation.hpp
